--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@copilotkit/react-core": "^1.6.0",
     "@copilotkit/react-ui": "^1.6.0",
     "@copilotkit/runtime": "^1.6.0",
+    "@heroicons/react": "^2.2.0",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,6 +22,7 @@
     "next": "15.2.0-canary.73",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-spreadsheet": "^0.9.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
