--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@copilotkit/react-ui": "^1.6.0",
     "@copilotkit/runtime": "^1.6.0",
     "@heroicons/react": "^2.2.0",
+    "@langchain/openai": "^0.4.5",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
